Refactor `BaseFhirDao` to remove unused `UnstableApiUsage` suppressions, add `@NonNull` annotations, simplify sort logic with `switch`, and clean up merge handling.